--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
     // Navigation library
     id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
 }
@@ -51,6 +52,11 @@ android {
 }
 
 dependencies {
+    // Firebase
+    implementation 'com.google.firebase:firebase-bom:30.5.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+
     // Retrofit
     // https://github.com/square/retrofitokhttp3
     // https://github.com/square/okhttp
