feat: Add navigation from View Tags to View Cards with argument passing | #72
feat: Add navigation from View Tags to View Cards with argument passing | #72

* This commit adds the selected tags as an argument into the ViewCards screen. Nothing is currently done with the navigation once complete.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ android {
 }
 
 dependencies {
+    // GSON
+    implementation 'com.google.code.gson:gson:2.10'
+
     // Firebase
     implementation 'com.google.firebase:firebase-bom:30.5.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
