--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,125 +1,128 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
-    id 'com.google.gms.google-services'
-    // Navigation library
-    id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+	id 'com.android.application'
+	id 'kotlin-android'
+	id 'kotlin-kapt'
+	id 'dagger.hilt.android.plugin'
+	id 'com.google.gms.google-services'
+	// Navigation library
+	id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
 }
 
 android {
-    compileSdk 33
+	compileSdk 33
 
-    defaultConfig {
-        applicationId "com.dodo.flashcards"
-        minSdk 23
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+	defaultConfig {
+		applicationId "com.dodo.flashcards"
+		minSdk 24
+		targetSdk 32
+		versionCode 1
+		versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
-    }
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+		vectorDrawables {
+			useSupportLibrary true
+		}
+	}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.1'
-        kotlinCompilerVersion compose_version
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+		}
+	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+	kotlinOptions {
+		jvmTarget = '1.8'
+	}
+	buildFeatures {
+		compose true
+	}
+	composeOptions {
+		kotlinCompilerExtensionVersion '1.3.1'
+		kotlinCompilerVersion compose_version
+	}
+	packagingOptions {
+		resources {
+			excludes += '/META-INF/{AL2.0,LGPL2.1}'
+		}
+	}
 }
 
 dependencies {
-    // GSON
-    implementation 'com.google.code.gson:gson:2.10'
+	// Swipeable card modifier
+	implementation 'com.alexstyl.swipeablecard:swipeablecard:0.1.0'
 
-    // Firebase
-    implementation 'com.google.firebase:firebase-bom:30.5.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
+	// GSON
+	implementation 'com.google.code.gson:gson:2.10'
 
-    // Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
+	// Firebase
+	implementation 'com.google.firebase:firebase-bom:30.5.0'
+	implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
 
-    // Retrofit
-    // https://github.com/square/retrofitokhttp3
-    // https://github.com/square/okhttp
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+	// Firestore
+	implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
 
-    // Datastore
-    // https://developer.android.com/codelabs/android-preferences-datastore#4
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.datastore:datastore:1.0.0"
-    implementation "androidx.datastore:datastore-rxjava2:1.0.0"
-    implementation "androidx.datastore:datastore-rxjava3:1.0.0"
+	// Retrofit
+	// https://github.com/square/retrofitokhttp3
+	// https://github.com/square/okhttp
+	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
-    // ROOM
-    implementation 'androidx.room:room-runtime:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
+	// Datastore
+	// https://developer.android.com/codelabs/android-preferences-datastore#4
+	implementation "androidx.datastore:datastore-preferences:1.0.0"
+	implementation "androidx.datastore:datastore:1.0.0"
+	implementation "androidx.datastore:datastore-rxjava2:1.0.0"
+	implementation "androidx.datastore:datastore-rxjava3:1.0.0"
 
-    // ICONS
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+	// ROOM
+	implementation 'androidx.room:room-runtime:2.4.3'
+	kapt 'androidx.room:room-compiler:2.4.3'
+	implementation 'androidx.room:room-ktx:2.4.3'
 
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+	// ICONS
+	implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-    // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+	// Coroutines
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
-    // Dagger-Hilt
-    implementation 'com.google.dagger:hilt-android:2.43.2'
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    kapt 'com.google.dagger:hilt-android-compiler:2.43.2'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
+	// Coroutine Lifecycle Scopes
+	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+	implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
-    // Navigation
-    implementation("androidx.navigation:navigation-compose:2.5.2")
+	// Dagger-Hilt
+	implementation 'com.google.dagger:hilt-android:2.43.2'
+	implementation 'com.google.android.gms:play-services-maps:18.1.0'
+	kapt 'com.google.dagger:hilt-android-compiler:2.43.2'
+	kapt 'androidx.hilt:hilt-compiler:1.0.0'
+	implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+	implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
 
-    // Navigation Animated Library
-    // This is important to avoid the goofy awkward look of the top bar fading in and out
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.22.1-rc"
+	// Navigation
+	implementation("androidx.navigation:navigation-compose:2.5.2")
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
-    testImplementation 'junit:junit:+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+	// Navigation Animated Library
+	// This is important to avoid the goofy awkward look of the top bar fading in and out
+	implementation "com.google.accompanist:accompanist-navigation-animation:0.22.1-rc"
+
+	implementation 'androidx.core:core-ktx:1.9.0'
+	implementation 'androidx.appcompat:appcompat:1.5.1'
+	implementation 'com.google.android.material:material:1.6.1'
+	implementation "androidx.compose.ui:ui:$compose_version"
+	implementation "androidx.compose.material:material:$compose_version"
+	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+	implementation 'androidx.activity:activity-compose:1.6.0'
+	testImplementation 'junit:junit:+'
+	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+	debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
